# pybullet-UR10-navigation

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/urdf/: ur10_robot.urdf
